[package]
authors = ["Jake Goulding <jake.goulding@integer32.com>"]
name = "ui"
version = "0.1.0"

[features]
default = ['fork-bomb-prevention']
fork-bomb-prevention = []

[dependencies]
bodyparser = "0.8.0"
corsware = "0.2.0"
env_logger = "0.5.13"
iron = "0.6.0"
lazy_static = "1.1.0"
log = "0.4.5"
mktemp = "0.3.1"
mount = "0.4.0"
petgraph = "0.4.13"
quick-error = "1.2.2"
regex = "1.0.5"
rustc-demangle = "0.1.9"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_json = "1.0.27"
url = "1.7.1"
hubcaps = "0.4.10"
tokio-core = "0.1.17"
hyper = "0.11.21"
hyper-tls = "0.1.2"
router = "0.6.0"
openssl-probe = "0.1.2"
dotenv = "0.13.0"

[dependencies.playground-middleware]
git = "https://github.com/integer32llc/playground-middleware"
